<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>

    <group android:menuCategory="container">
        <item android:id="@+id/menu_creator"
            android:title="@string/visit_creator" />
    </group>
</menu>